# rofi-vscode-mode

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
ci/: PKGBUILD.in  generate_pkgbuild.py  install-common-deps-ubuntu  install-rofi-deps-ubuntu
src/: lib.rs  rofi.rs  utils.rs  vscode.rs
