[package]
name = "rofi-vscode-mode"
version = "0.1.0"
authors = ["Alessandro Fulgini <fuljo97@gmail.com>"]
edition = "2021"
rust-version = "1.60.0"
description = "A Rofi mode to open Visual Studio Code workspaces"
repository = "https://github.com/fuljo/rofi-vscode-mode"
license = "MIT"
keywords = ["rofi", "mode", "plugin", "vscode"]
categories = ["command-line-utilities"]

exclude = ["/ci", "assets/", ".*", "install.sh", "ci"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "vscode-recent"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"]}
dirs = "4.0"
pangocairo = "0.15" # should be consistent with the dependency from rofi-mode
rofi-mode = "0.2"
rusqlite = { version = "0.28", features = ["serde_json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
which = "4.3"
